Add organizer info

--- a/seminar/templates/seminar.htm
+++ b/seminar/templates/seminar.htm
@@ -258,8 +258,9 @@
             <div id="page-metadata-start" class="assistive"></div>
             <div id="page-metadata-end" class="assistive"></div>
             <div id="main-content" class="wiki-content">
-                <h2 id="id-2018AutumnFIBLABGroupSeminarSchedule-Time:14:00-17:00pmThursday">Time: 14:00-17:00pm Thursday</h2>
+                <h2 id="id-2018AutumnFIBLABGroupSeminarSchedule:Huan">Organizer: Huan Yan</h2>
                 <h2 id="id-2018AutumnFIBLABGroupSeminarSchedule:RohmBuilding">Location: Rohm Building, Tsinghua University</h2>
+                <h2 id="id-2018AutumnFIBLABGroupSeminarSchedule-Time:14:00-17:00pmThursday">Time: 14:00-17:00pm Thursday</h2>
                 {% for seminar_date, seminar_grp in seminars %}
                 <h2 id="id-2018AutumnFIBLABGroupSeminarSchedule:Week0">Date: {{ seminar_date }}</h2>
                 <div class="table-wrap">
