--- a/seminar/templates/seminar.htm
+++ b/seminar/templates/seminar.htm
@@ -177,8 +177,8 @@
                 <form method="post">
                 {% csrf_token %}
                 {% if not user.is_authenticated %}
-                    <input type="text" name="username" />
-                    <input type="password" name="password" />
+                    <input type="text" name="username" placeholder="Username" />
+                    <input type="password" name="password" placeholder="Password" />
                     <input type="hidden" name="action" value="login" />
                     <input type="submit" value="Login" />
                 {% else %}
